深度学习的数学基础

--- a/Note/AI_Learn 3_数学基础/3_数学基础.md
+++ b/Note/AI_Learn 3_数学基础/3_数学基础.md
@@ -170,3 +170,149 @@ input_tensor = torch.Tensor(input.to_numpy(dtype=float))
 
 ## 3. 线性代数
 
+### 标量
+
+标量由只有一个元素的张量表示。
+
+```python
+import torch
+
+x = torch.tensor(3.0)
+y = torch.tensor(2.0)
+
+x + y, x * y, x / y, x**y
+```
+
+### 向量
+
+向量可以被视为标量值组成的列表。 这些标量值被称为向量的元素（element）或分量（component）。通过一维张量表示向量。
+
+```python
+x = torch.arange(4)
+```
+
+**列向量是向量的默认方向。**
+
+### 矩阵和张量
+
+矩阵是具有两个轴的张量。
+
+对于两个矩阵而言，有以下运算：
+
+1. 哈达玛积（按元素乘积）
+
+$$
+A \odot B = \left[ \begin{matrix} a_{11}b_{11}& a_{12}b_{12} & \dots  & a_{1n}b_{1n} \\ a_{11}b_{11}& a_{12}b_{12}& \dots &a_{1n}b_{1n} \\ \vdots & \vdots & \ddots &\vdots \\ a_{m1}b_{m1}& a_{m2}b_{m2}& \dots &a_{mn}b_{mn}
+\end{matrix}\right]
+$$
+
+```python
+A * B
+```
+
+2. 点积
+
+$$
+\bold{x^T y} =\sum x_iy_i 
+$$
+
+```python
+torch.dot()
+```
+
+3. 矩阵-向量积
+
+$$
+\bold{Ax} = 
+\left[
+\begin{matrix}
+\bold{a_1^T} \\
+\bold{a_2^T} \\
+\vdots \\
+\bold{a_m^T}
+\end{matrix}
+\right]\bold{x} = 
+\left[
+\begin{matrix}
+\bold{a_1^T x} \\
+\bold{a_2^T x} \\
+\vdots \\
+\bold{a_m^T x}
+\end{matrix}
+\right]
+$$
+
+```python
+torch.mv()
+```
+
+4. 矩阵乘法
+
+```python
+torch.matmul()
+```
+
+### 范数
+
+范数是一种距离的表示。
+
+$L_2$范数：
+$$
+||x||_2 = \sqrt{\sum_{i=1}^n x_i^2}
+$$
+
+```python
+torch.norm()
+```
+
+$L_1$范数：
+$$
+||x||_1 = \sum_{i=1}^n|x_i|
+$$
+
+## 4. 微积分
+
+### 多元函数的导数
+
+梯度：
+$$
+\nabla f(\bold{x}) = \left[ \begin{matrix}\frac{\partial f(\bold{x})}{\partial x_1} & \frac{\partial f(\bold{x})}{\partial x_2} & \frac{\partial f(\bold{x})}{\partial x_3} & \cdots & \frac{\partial f(\bold{x})}{\partial x_n}\end{matrix}\right]
+$$
+
+### 自动微分
+
+在深度学习框架中，系统会根据模型设计一个计算图，跟踪哪些数据通过哪些操作组合起来产生输出。自动微分使得系统能够在进行计算后随后反向传播梯度。
+
+反向传播：跟踪整个计算图，填充关于每个参数的偏导数。
+
+1. 对标量的自动微分
+
+```python
+x = torch.arange(4.0, requires_grad=True)
+
+y = 2*torch.dot(x, x)
+
+# 反向传播算法计算y对x的梯度
+y.backward()
+# x 具有grad(梯度)成员，使用zero_方法对其进行清零操作
+x.grad.zero_()
+```
+
+2. 对向量的自动微分
+
+```python
+# 计算批量中每个样本的偏导数之和
+x.grad.zero_()
+y = x*x
+y.sum().backward()
+```
+
+3. 求存在中间变量时的自动微分
+
+```python
+y = x*x
+u = y.detach()
+z = x*u
+z.sum().backward()
+```
+
