线性神经网络

--- a/Note/AL_Learn 4_线性神经网络/4_线性神经网络.md
+++ b/Note/AL_Learn 4_线性神经网络/4_线性神经网络.md
@@ -134,7 +134,7 @@ $$
 
 对于线性回归，每个输入和每个输出都是相连的，这种变换为**全连接层（fully-connected layer）**或**稠密层（dense layer）**。
 
-## 2. 线性神经网络的实现
+## 2. 线性回归神经网络的实现
 
 ### 生成数据集
 
@@ -260,10 +260,194 @@ def sgd(params, lr, batch_size):
 for epoch in range(num_epochs):
     for X, y in data_iter(batch_size, features, labels):   # 取小批量的样本
         l = loss(y, net(X, w, b))                          # 模型输出并计算损失函数
-        l.sum().backward()                                 # 先求和，再求梯度
+        l.sum().backward()                                 # 反向传播求得w,b的梯度值
         sgd([w, b], lr, batch_size)                        # 随机梯度下降
         with torch.no_grad():
             train_l = loss(net(features, w, b), labels)                     # 将求出的参数代入原模型，计算损失函数
             print(f'epoch {epoch + 1}, loss {float(train_l.mean()):f}')
 ```
+
+## 3. 线性回归神经网络的简单实现
+
+### 创建数据集
+
+```python
+# 创建数据集
+features, labels = d2l.synthetic_data(true_w, true_b, 1000)
+```
+
+### 读取数据集
+
+```python
+"""
+	创建一个包含输入特征和标签的数据集对象
+"""
+data.TensorDataset()
+
+"""
+	样本数据抽样函数
+	第一个参数：数据集
+	第二个参数：抽样数量
+	第三个参数：是否在每次调用时打乱数据集
+"""
+data.DataLoader()
+```
+
+```python
+def load_data(data_arrays, batch_size, is_Trained=True):
+    """小批量读取数据集函数
+
+    Args:
+        data_arrays : 样本数据
+        batch_size : 样本批量大小
+        is_Trained : 是否在迭代周期内打乱数据
+
+    Returns:
+        _type_: _description_
+    """
+    # 构建数据集
+    dataset = data.TensorDataset(*data_arrays)
+    # 返回小批量样本的特征和标签
+    return data.DataLoader(dataset, batch_size, shuffle=is_Trained)
+```
+
+### 构建神经网络并初始化模型参数
+
+```python
+"""
+	神经网络类
+	构建时在参数中添加所需要素
+"""
+nn.Sequential()
+```
+
+```python
+"""
+	全连接层类
+	第一个参数：输入特征形状
+	第二个参数：输出标签形状
+"""
+nn.Linear()
+```
+
+神经网络只有单层，此时使用索引方式选定第一层并使用`weight.data`和`bias.data`进行初始化。
+
+```python
+net[0].weight.data.normal_(0, 0.01)
+net[0].bias.data.fill_(0)
+```
+
+### 定义损失函数
+
+```python
+"""
+	L2 范数损失函数类
+"""
+nn.MSEloss()
+```
+
+### 定义优化算法
+
+小批量随机梯度下降算法是一种优化神经网络的标准工具， PyTorch在`optim`模块中实现了该算法的许多变种。 
+
+实例化SGD实例时，需要指定网络参数（`net.parameters()`方法）和超参数。
+
+```python
+trainer = torch.optim.SGD(net.parameters(), lr=0.03)
+```
+
+### 进行训练
+
+在每个迭代周期里，将完整遍历一次数据集（`train_data`）， 不停地从中获取一个小批量的输入和相应的标签。 对于每一个小批量，会进行以下步骤:
+
+- 通过调用`net(X)`生成预测并计算损失`l`（前向传播）。
+- 通过进行反向传播来计算梯度。
+- 通过调用优化器来更新模型参数。
+
+```python
+num_epochs = 3
+for epoch in range(num_epochs):
+    for X, y in data_iter:
+        # 预测并计算损失（前向传播）
+        l = loss(net(X), y)
+        # 梯度清零
+        trainer.zero_grad()
+        # 反向传播
+        l.backward()
+        # 调用优化器
+        trainer.step()
+    l = loss(net(features), labels)
+    print(f'epoch {epoch + 1}, loss {l:f}')
+```
+
+## 4. Softmax 回归
+
+### 分类问题
+
+- 分类的表示
+
+通常，对于分类问题，使用概率描述（如该图像有可能属于A类，概率为0.01，有可能属于B类，概率为0.99）。注意，使用概率时应进行**标准化**（以满足概率论公理）。
+
+- 标签的表示
+
+通常使用`one-hot`编码表示标签。（如A，B，C三类，分别为{1,0,0}，{0,1,0}，{0,0,1})。
+
+此时的标签形成一个n维向量，n即为分类的类别。
+
+### 分类线性神经网络架构
+
+以图像分类问题为例：假设输入了含m个像素的图像（输入维数为m），需要进行n个分类（输出维数为n）。则需要n个仿射函数：
+$$
+o_1 = x_1w_{11}+x_2w_{12}+\dots+x_mw_{1m} + b_1 \\
+o_2 = x_1w_{21}+x_2w_{22}+\dots+x_mw_{2m} + b_2 \\
+\dots \\
+o_n = x_1w_{n1}+x_2w_{n2}+\dots+x_mw_{nm} + b_n \\
+$$
+![NULL](picture_2.jpg)
+
+对于上述问题构建的神经网络仍然只有一个输出层，为单层神经网络。输出层的每一个输出均由所有输入决定，为全连接层。
+
+将网络函数矩阵化可得：
+$$
+\bold{o} = \bold{Wx}+\bold{b}
+$$
+
+### softmax 运算
+
+为了得到最后的分类结果，在输出向量中找到最大值（大于设定阈值）分量，即可将此分量置信为对应分类。首先需要一个训练的目标函数，激励模型精准的估计概率（在分类器输出0.5的所有样本中，我们希望这些样本是刚好有一半实际上属于预测的类别。 这个属性叫做**校准（calibration）**）
+
+但是此时要求对$\bold{o}$进行标准化，即$\sum_{i=1}^no_i = 1$。此时使用softmax函数：
+$$
+\bold{\hat{y}} = softmax(\bold{o}) \\
+\hat{y_j} = \frac{e^{o_j}}{\sum_{i=1}^{k}e^{o_i}}
+$$
+softmax函数不改变$o_i$的排列大小顺序，所以经softmax变换后作为输出层的网络仍然是线性神经网络。
+
+### softmax 回归的损失函数
+
+- 对数似然
+
+$\bold{y}$的含义是对任意输入$\bold{x}$每个分类的条件概率。假设数据集$\{\bold{X},\bold{Y}\}$有n个样本，索引$i$的样本由特征向量$\bold{x^{(i)}}$和one-hot标签向量$\bold{y^{(i)}}$构成。同线性回归，此时最小化负对数似然：
+$$
+-\log P(\mathbf{Y} \mid \mathbf{X}) = \sum_{i=1}^n -\log P(\mathbf{y}^{(i)} \mid \mathbf{x}^{(i)}) = \sum_{i=1}^n l(\mathbf{y}^{(i)}, \hat{\mathbf{y}}^{(i)})
+$$
+其中，对于任何标签$\mathbf{y}$和模型预测$\hat{\mathbf{y}}$，损失函数为：
+$$
+l(\mathbf{y}, \hat{\mathbf{y}}) = - \sum_{j=1}^q y_j \log \hat{y}_j
+$$
+损失函数 通常被称为**交叉熵损失（cross-entropy loss）**。 由于$\mathbf{y}$是一个长度为q的one-hot编码向量， 所以除了一个项以外的所有项j都消失了。 由于所有$\hat{y}_j$都是预测的概率，所以它们的对数永远不会大于0。 因此，如果正确地预测实际标签，即如果实际标签$P(\mathbf{y} \mid \mathbf{x})=1$， 则损失函数不能进一步最小化。 注意，这往往是不可能的。 例如，数据集中可能存在标签噪声（比如某些样本可能被误标）， 或输入特征没有足够的信息来完美地对每一个样本分类。
+
+- softmax 的导数
+
+$$
+\begin{split}\begin{aligned} l(\mathbf{y}, \hat{\mathbf{y}}) &= - \sum_{j=1}^q y_j \log \frac{\exp(o_j)}{\sum_{k=1}^q \exp(o_k)} \\ &= \sum_{j=1}^q y_j \log \sum_{k=1}^q \exp(o_k) - \sum_{j=1}^q y_j o_j\\ &= \log \sum_{k=1}^q \exp(o_k) - \sum_{j=1}^q y_j o_j. \end{aligned}\end{split}\
+$$
+
+则导数为：
+$$
+\partial_{o_j} l(\mathbf{y}, \hat{\mathbf{y}}) = \frac{\exp(o_j)}{\sum_{k=1}^q \exp(o_k)} - y_j = \mathrm{softmax}(\mathbf{o})_j - y_j
+$$
+即：导数是softmax模型分配的概率与实际发生的情况（由one-hot标签向量表示）之间的差异。
+
+## 5. Softmax 回归的实现
 
